baml_language/crates/baml_tests/snapshots/compiles/type_annotation/baml_tests__compiles__type_annotation__02_parser__type_positions.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 23316
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_let_binding"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "function_name"
        COLON ":"
        TYPE_EXPR "string"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            CHAIN_PATTERN
              BINDING_PATTERN "let t"
                KW_LET "let"
                WORD "t"
              COLON ":"
              TYPE_PATTERN
                TYPE_EXPR "type"
                  WORD "type"
          EQUALS "="
          CALL_EXPR
            PATH_EXPR "baml.llm.get_return_type"
              WORD "baml"
              DOT "."
              WORD "llm"
              DOT "."
              WORD "get_return_type"
            CALL_ARGS "(function_name)"
              L_PAREN "("
              WORD "function_name"
              R_PAREN ")"
          SEMICOLON ";"
        RETURN_STMT
          KW_RETURN "return"
          STRING_LITERAL "ok"
            QUOTE """
            WORD "ok"
            QUOTE """
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_param"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "t"
        COLON ":"
        TYPE_EXPR "type"
          WORD "type"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        RETURN_STMT
          KW_RETURN "return"
          STRING_LITERAL "ok"
            QUOTE """
            WORD "ok"
            QUOTE """
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_return_type"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "function_name"
        COLON ":"
        TYPE_EXPR "string"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "type"
      WORD "type"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        RETURN_STMT
          KW_RETURN "return"
          CALL_EXPR
            PATH_EXPR "baml.llm.get_return_type"
              WORD "baml"
              DOT "."
              WORD "llm"
              DOT "."
              WORD "get_return_type"
            CALL_ARGS "(function_name)"
              L_PAREN "("
              WORD "function_name"
              R_PAREN ")"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_optional"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "function_name"
        COLON ":"
        TYPE_EXPR "string"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            CHAIN_PATTERN
              BINDING_PATTERN "let t"
                KW_LET "let"
                WORD "t"
              COLON ":"
              TYPE_PATTERN
                TYPE_EXPR "type?"
                  WORD "type"
                  QUESTION "?"
          EQUALS "="
          WORD "null"
          SEMICOLON ";"
        RETURN_STMT
          KW_RETURN "return"
          STRING_LITERAL "ok"
            QUOTE """
            WORD "ok"
            QUOTE """
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_list"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "function_name"
        COLON ":"
        TYPE_EXPR "string"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            CHAIN_PATTERN
              BINDING_PATTERN "let ts"
                KW_LET "let"
                WORD "ts"
              COLON ":"
              TYPE_PATTERN
                TYPE_EXPR "type[]"
                  WORD "type"
                  L_BRACKET "["
                  R_BRACKET "]"
          EQUALS "="
          ARRAY_LITERAL "[]"
            L_BRACKET "["
            R_BRACKET "]"
          SEMICOLON ";"
        RETURN_STMT
          KW_RETURN "return"
          STRING_LITERAL "ok"
            QUOTE """
            WORD "ok"
            QUOTE """
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_union"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "function_name"
        COLON ":"
        TYPE_EXPR "string"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            CHAIN_PATTERN
              BINDING_PATTERN "let t"
                KW_LET "let"
                WORD "t"
              COLON ":"
              UNION_PATTERN
                TYPE_PATTERN
                  TYPE_EXPR "type"
                    WORD "type"
                PIPE "|"
                TYPE_PATTERN
                  TYPE_EXPR "string"
                    WORD "string"
          EQUALS "="
          STRING_LITERAL "hello"
            QUOTE """
            WORD "hello"
            QUOTE """
          SEMICOLON ";"
        RETURN_STMT
          KW_RETURN "return"
          STRING_LITERAL "ok"
            QUOTE """
            WORD "ok"
            QUOTE """
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_map"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "function_name"
        COLON ":"
        TYPE_EXPR "string"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            CHAIN_PATTERN
              BINDING_PATTERN "let m"
                KW_LET "let"
                WORD "m"
              COLON ":"
              TYPE_PATTERN
                TYPE_EXPR
                  WORD "map"
                  TYPE_ARGS
                    LESS "<"
                    TYPE_EXPR "string"
                      WORD "string"
                    COMMA ","
                    TYPE_EXPR "type"
                      WORD "type"
                    GREATER ">"
          EQUALS "="
          MAP_LITERAL "{}"
            L_BRACE "{"
            R_BRACE "}"
          SEMICOLON ";"
        RETURN_STMT
          KW_RETURN "return"
          STRING_LITERAL "ok"
            QUOTE """
            WORD "ok"
            QUOTE """
          SEMICOLON ";"
        R_BRACE "}"

=== ERRORS ===
None
